test: transportController test